Others/minipascal2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> listadefuns
Rule 2     listadefuns -> funcion
Rule 3     listadefuns -> listadefuns funcion
Rule 4     funcion -> fun ID PARI argsop PARD localesop begin listadeclaraciones end
Rule 5     funcion -> fun ID PARI argsop PARD localesop begin listadeclaraciones PYC end
Rule 6     argsop -> argumentos
Rule 7     argsop -> empty
Rule 8     argumentos -> defvar
Rule 9     argumentos -> argumentos COMA defvar
Rule 10    argumentos -> argumentos defvar
Rule 11    argumentos -> error
Rule 12    localesop -> locales
Rule 13    localesop -> empty
Rule 14    locales -> defvar PYC
Rule 15    locales -> funcion PYC
Rule 16    locales -> locales defvar PYC
Rule 17    locales -> locales funcion PYC
Rule 18    locales -> error
Rule 19    defvar -> ID DOSPUNT tipo
Rule 20    defvar -> ID tipo
Rule 21    tipo -> int
Rule 22    tipo -> float
Rule 23    tipo -> int CORI expresion CORD
Rule 24    tipo -> float CORI expresion CORD
Rule 25    declaracion -> while relacion do declaracion
Rule 26    declaracion -> ifthen
Rule 27    declaracion -> ifthenelse
Rule 28    declaracion -> ubicacion ASIG expresion
Rule 29    declaracion -> print PARI CADENA PARD
Rule 30    declaracion -> write PARI expresion PARD
Rule 31    declaracion -> read PARI ubicacion PARD
Rule 32    declaracion -> return expresion
Rule 33    declaracion -> ID PARI listadeexpresionesop PARD
Rule 34    declaracion -> skip
Rule 35    declaracion -> break
Rule 36    declaracion -> begin listadeclaraciones end
Rule 37    declaracion -> begin end
Rule 38    ifthen -> if relacion then declaracion
Rule 39    ifthenelse -> if relacion then declaracion else declaracion
Rule 40    ifthen -> if relacion declaracion
Rule 41    ifthen -> if relacion declaracion else declaracion
Rule 42    listadeclaraciones -> declaracion
Rule 43    listadeclaraciones -> listadeclaraciones PYC declaracion
Rule 44    listadeclaraciones -> listadeclaraciones declaracion
Rule 45    ubicacion -> ID
Rule 46    ubicacion -> ID CORI expresion CORD
Rule 47    expresion -> expresion SUMA expresion
Rule 48    expresion -> expresion RESTA expresion
Rule 49    expresion -> expresion MULTI expresion
Rule 50    expresion -> expresion DIVIDIR expresion
Rule 51    expresion -> RESTA expresion
Rule 52    expresion -> SUMA expresion
Rule 53    expresion -> PARI expresion PARD
Rule 54    expresion -> ID PARI listadeexpresionesop PARD
Rule 55    expresion -> ID
Rule 56    expresion -> ID CORI expresion CORD
Rule 57    expresion -> numero
Rule 58    expresion -> int PARI expresion PARD
Rule 59    expresion -> float PARI expresion PARD
Rule 60    listadeexpresionesop -> listadeexpresiones
Rule 61    listadeexpresionesop -> empty
Rule 62    listadeexpresiones -> expresion
Rule 63    listadeexpresiones -> listadeexpresiones COMA expresion
Rule 64    relacion -> expresion MENQ expresion
Rule 65    relacion -> expresion MENIG expresion
Rule 66    relacion -> expresion MAYQ expresion
Rule 67    relacion -> expresion MAYIG expresion
Rule 68    relacion -> expresion IGU expresion
Rule 69    relacion -> expresion DIF expresion
Rule 70    relacion -> relacion and relacion
Rule 71    relacion -> relacion or relacion
Rule 72    relacion -> not relacion
Rule 73    relacion -> PARI relacion PARD
Rule 74    relacion -> error
Rule 75    numero -> ENTERO
Rule 76    numero -> REAL
Rule 77    empty -> <empty>

Terminals, with rules where they appear

ASIG                 : 28
CADENA               : 29
COMA                 : 9 63
CORD                 : 23 24 46 56
CORI                 : 23 24 46 56
DIF                  : 69
DIVIDIR              : 50
DOSPUNT              : 19
ENTERO               : 75
ID                   : 4 5 19 20 33 45 46 54 55 56
IGU                  : 68
MAYIG                : 67
MAYQ                 : 66
MENIG                : 65
MENQ                 : 64
MULTI                : 49
PARD                 : 4 5 29 30 31 33 53 54 58 59 73
PARI                 : 4 5 29 30 31 33 53 54 58 59 73
PYC                  : 5 14 15 16 17 43
REAL                 : 76
RESTA                : 48 51
SUMA                 : 47 52
and                  : 70
begin                : 4 5 36 37
break                : 35
do                   : 25
else                 : 39 41
end                  : 4 5 36 37
error                : 11 18 74
float                : 22 24 59
fun                  : 4 5
if                   : 38 39 40 41
int                  : 21 23 58
not                  : 72
or                   : 71
print                : 29
read                 : 31
return               : 32
skip                 : 34
then                 : 38 39
while                : 25
write                : 30

Nonterminals, with rules where they appear

argsop               : 4 5
argumentos           : 6 9 10
declaracion          : 25 38 39 39 40 41 41 42 43 44
defvar               : 8 9 10 14 16
empty                : 7 13 61
expresion            : 23 24 28 30 32 46 47 47 48 48 49 49 50 50 51 52 53 56 58 59 62 63 64 64 65 65 66 66 67 67 68 68 69 69
funcion              : 2 3 15 17
ifthen               : 26
ifthenelse           : 27
listadeclaraciones   : 4 5 36 43 44
listadeexpresiones   : 60 63
listadeexpresionesop : 33 54
listadefuns          : 1 3
locales              : 12 16 17
localesop            : 4 5
numero               : 57
program              : 0
relacion             : 25 38 39 40 41 70 70 71 71 72 73
tipo                 : 19 20
ubicacion            : 28 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . listadefuns
    (2) listadefuns -> . funcion
    (3) listadefuns -> . listadefuns funcion
    (4) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones end
    (5) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones PYC end

    fun             shift and go to state 3

    listadefuns                    shift and go to state 1
    program                        shift and go to state 2
    funcion                        shift and go to state 4

state 1

    (1) program -> listadefuns .
    (3) listadefuns -> listadefuns . funcion
    (4) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones end
    (5) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones PYC end

    $end            reduce using rule 1 (program -> listadefuns .)
    fun             shift and go to state 3

    funcion                        shift and go to state 5

state 2

    (0) S' -> program .



state 3

    (4) funcion -> fun . ID PARI argsop PARD localesop begin listadeclaraciones end
    (5) funcion -> fun . ID PARI argsop PARD localesop begin listadeclaraciones PYC end

    ID              shift and go to state 6


state 4

    (2) listadefuns -> funcion .

    fun             reduce using rule 2 (listadefuns -> funcion .)
    $end            reduce using rule 2 (listadefuns -> funcion .)


state 5

    (3) listadefuns -> listadefuns funcion .

    fun             reduce using rule 3 (listadefuns -> listadefuns funcion .)
    $end            reduce using rule 3 (listadefuns -> listadefuns funcion .)


state 6

    (4) funcion -> fun ID . PARI argsop PARD localesop begin listadeclaraciones end
    (5) funcion -> fun ID . PARI argsop PARD localesop begin listadeclaraciones PYC end

    PARI            shift and go to state 7


state 7

    (4) funcion -> fun ID PARI . argsop PARD localesop begin listadeclaraciones end
    (5) funcion -> fun ID PARI . argsop PARD localesop begin listadeclaraciones PYC end
    (6) argsop -> . argumentos
    (7) argsop -> . empty
    (8) argumentos -> . defvar
    (9) argumentos -> . argumentos COMA defvar
    (10) argumentos -> . argumentos defvar
    (11) argumentos -> . error
    (77) empty -> .
    (19) defvar -> . ID DOSPUNT tipo
    (20) defvar -> . ID tipo

    error           shift and go to state 10
    PARD            reduce using rule 77 (empty -> .)
    ID              shift and go to state 12

    argsop                         shift and go to state 8
    defvar                         shift and go to state 9
    argumentos                     shift and go to state 11
    empty                          shift and go to state 13

state 8

    (4) funcion -> fun ID PARI argsop . PARD localesop begin listadeclaraciones end
    (5) funcion -> fun ID PARI argsop . PARD localesop begin listadeclaraciones PYC end

    PARD            shift and go to state 14


state 9

    (8) argumentos -> defvar .

    COMA            reduce using rule 8 (argumentos -> defvar .)
    ID              reduce using rule 8 (argumentos -> defvar .)
    PARD            reduce using rule 8 (argumentos -> defvar .)


state 10

    (11) argumentos -> error .

    COMA            reduce using rule 11 (argumentos -> error .)
    ID              reduce using rule 11 (argumentos -> error .)
    PARD            reduce using rule 11 (argumentos -> error .)


state 11

    (6) argsop -> argumentos .
    (9) argumentos -> argumentos . COMA defvar
    (10) argumentos -> argumentos . defvar
    (19) defvar -> . ID DOSPUNT tipo
    (20) defvar -> . ID tipo

    PARD            reduce using rule 6 (argsop -> argumentos .)
    COMA            shift and go to state 16
    ID              shift and go to state 12

    defvar                         shift and go to state 15

state 12

    (19) defvar -> ID . DOSPUNT tipo
    (20) defvar -> ID . tipo
    (21) tipo -> . int
    (22) tipo -> . float
    (23) tipo -> . int CORI expresion CORD
    (24) tipo -> . float CORI expresion CORD

    DOSPUNT         shift and go to state 20
    int             shift and go to state 18
    float           shift and go to state 19

    tipo                           shift and go to state 17

state 13

    (7) argsop -> empty .

    PARD            reduce using rule 7 (argsop -> empty .)


state 14

    (4) funcion -> fun ID PARI argsop PARD . localesop begin listadeclaraciones end
    (5) funcion -> fun ID PARI argsop PARD . localesop begin listadeclaraciones PYC end
    (12) localesop -> . locales
    (13) localesop -> . empty
    (14) locales -> . defvar PYC
    (15) locales -> . funcion PYC
    (16) locales -> . locales defvar PYC
    (17) locales -> . locales funcion PYC
    (18) locales -> . error
    (77) empty -> .
    (19) defvar -> . ID DOSPUNT tipo
    (20) defvar -> . ID tipo
    (4) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones end
    (5) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones PYC end

    error           shift and go to state 24
    begin           reduce using rule 77 (empty -> .)
    ID              shift and go to state 12
    fun             shift and go to state 3

    defvar                         shift and go to state 21
    locales                        shift and go to state 25
    localesop                      shift and go to state 23
    empty                          shift and go to state 22
    funcion                        shift and go to state 26

state 15

    (10) argumentos -> argumentos defvar .

    COMA            reduce using rule 10 (argumentos -> argumentos defvar .)
    ID              reduce using rule 10 (argumentos -> argumentos defvar .)
    PARD            reduce using rule 10 (argumentos -> argumentos defvar .)


state 16

    (9) argumentos -> argumentos COMA . defvar
    (19) defvar -> . ID DOSPUNT tipo
    (20) defvar -> . ID tipo

    ID              shift and go to state 12

    defvar                         shift and go to state 27

state 17

    (20) defvar -> ID tipo .

    PYC             reduce using rule 20 (defvar -> ID tipo .)
    COMA            reduce using rule 20 (defvar -> ID tipo .)
    ID              reduce using rule 20 (defvar -> ID tipo .)
    PARD            reduce using rule 20 (defvar -> ID tipo .)


state 18

    (21) tipo -> int .
    (23) tipo -> int . CORI expresion CORD

    COMA            reduce using rule 21 (tipo -> int .)
    ID              reduce using rule 21 (tipo -> int .)
    PARD            reduce using rule 21 (tipo -> int .)
    PYC             reduce using rule 21 (tipo -> int .)
    CORI            shift and go to state 28


state 19

    (22) tipo -> float .
    (24) tipo -> float . CORI expresion CORD

    COMA            reduce using rule 22 (tipo -> float .)
    ID              reduce using rule 22 (tipo -> float .)
    PARD            reduce using rule 22 (tipo -> float .)
    PYC             reduce using rule 22 (tipo -> float .)
    CORI            shift and go to state 29


state 20

    (19) defvar -> ID DOSPUNT . tipo
    (21) tipo -> . int
    (22) tipo -> . float
    (23) tipo -> . int CORI expresion CORD
    (24) tipo -> . float CORI expresion CORD

    int             shift and go to state 18
    float           shift and go to state 19

    tipo                           shift and go to state 30

state 21

    (14) locales -> defvar . PYC

    PYC             shift and go to state 31


state 22

    (13) localesop -> empty .

    begin           reduce using rule 13 (localesop -> empty .)


state 23

    (4) funcion -> fun ID PARI argsop PARD localesop . begin listadeclaraciones end
    (5) funcion -> fun ID PARI argsop PARD localesop . begin listadeclaraciones PYC end

    begin           shift and go to state 32


state 24

    (18) locales -> error .

    ID              reduce using rule 18 (locales -> error .)
    fun             reduce using rule 18 (locales -> error .)
    begin           reduce using rule 18 (locales -> error .)


state 25

    (12) localesop -> locales .
    (16) locales -> locales . defvar PYC
    (17) locales -> locales . funcion PYC
    (19) defvar -> . ID DOSPUNT tipo
    (20) defvar -> . ID tipo
    (4) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones end
    (5) funcion -> . fun ID PARI argsop PARD localesop begin listadeclaraciones PYC end

    begin           reduce using rule 12 (localesop -> locales .)
    ID              shift and go to state 12
    fun             shift and go to state 3

    defvar                         shift and go to state 33
    funcion                        shift and go to state 34

state 26

    (15) locales -> funcion . PYC

    PYC             shift and go to state 35


state 27

    (9) argumentos -> argumentos COMA defvar .

    COMA            reduce using rule 9 (argumentos -> argumentos COMA defvar .)
    ID              reduce using rule 9 (argumentos -> argumentos COMA defvar .)
    PARD            reduce using rule 9 (argumentos -> argumentos COMA defvar .)


state 28

    (23) tipo -> int CORI . expresion CORD
    (47) expresion -> . expresion SUMA expresion
    (48) expresion -> . expresion RESTA expresion
    (49) expresion -> . expresion MULTI expresion
    (50) expresion -> . expresion DIVIDIR expresion
    (51) expresion -> . RESTA expresion
    (52) expresion -> . SUMA expresion
    (53) expresion -> . PARI expresion PARD
    (54) expresion -> . ID PARI listadeexpresionesop PARD
    (55) expresion -> . ID
    (56) expresion -> . ID CORI expresion CORD
    (57) expresion -> . numero
    (58) expresion -> . int PARI expresion PARD
    (59) expresion -> . float PARI expresion PARD
    (75) numero -> . ENTERO
    (76) numero -> . REAL

    RESTA           shift and go to state 42
    SUMA            shift and go to state 44
    PARI            shift and go to state 40
    ID              shift and go to state 43
    int             shift and go to state 37
    float           shift and go to state 39
    ENTERO          shift and go to state 45
    REAL            shift and go to state 38

    expresion                      shift and go to state 36
    numero                         shift and go to state 41

state 29

    (24) tipo -> float CORI . expresion CORD
    (47) expresion -> . expresion SUMA expresion
    (48) expresion -> . expresion RESTA expresion
    (49) expresion -> . expresion MULTI expresion
    (50) expresion -> . expresion DIVIDIR expresion
    (51) expresion -> . RESTA expresion
    (52) expresion -> . SUMA expresion
    (53) expresion -> . PARI expresion PARD
    (54) expresion -> . ID PARI listadeexpresionesop PARD
    (55) expresion -> . ID
    (56) expresion -> . ID CORI expresion CORD
    (57) expresion -> . numero
    (58) expresion -> . int PARI expresion PARD
    (59) expresion -> . float PARI expresion PARD
    (75) numero -> . ENTERO
    (76) numero -> . REAL

    RESTA           shift and go to state 42
    SUMA            shift and go to state 44
    PARI            shift and go to state 40
    ID              shift and go to state 43
    int             shift and go to state 37
    float           shift and go to state 39
    ENTERO          shift and go to state 45
    REAL            shift and go to state 38

    expresion                      shift and go to state 46
    numero                         shift and go to state 41

state 30

    (19) defvar -> ID DOSPUNT tipo .

    PYC             reduce using rule 19 (defvar -> ID DOSPUNT tipo .)
    COMA            reduce using rule 19 (defvar -> ID DOSPUNT tipo .)
    ID              reduce using rule 19 (defvar -> ID DOSPUNT tipo .)
    PARD            reduce using rule 19 (defvar -> ID DOSPUNT tipo .)


state 31

    (14) locales -> defvar PYC .

    ID              reduce using rule 14 (locales -> defvar PYC .)
    fun             reduce using rule 14 (locales -> defvar PYC .)
    begin           reduce using rule 14 (locales -> defvar PYC .)


state 32

    (4) funcion -> fun ID PARI argsop PARD localesop begin . listadeclaraciones end
    (5) funcion -> fun ID PARI argsop PARD localesop begin . listadeclaraciones PYC end
    (42) listadeclaraciones -> . declaracion
    (43) listadeclaraciones -> . listadeclaraciones PYC declaracion
    (44) listadeclaraciones -> . listadeclaraciones declaracion
    (25) declaracion -> . while relacion do declaracion
    (26) declaracion -> . ifthen
    (27) declaracion -> . ifthenelse
    (28) declaracion -> . ubicacion ASIG expresion
    (29) declaracion -> . print PARI CADENA PARD
    (30) declaracion -> . write PARI expresion PARD
    (31) declaracion -> . read PARI ubicacion PARD
    (32) declaracion -> . return expresion
    (33) declaracion -> . ID PARI listadeexpresionesop PARD
    (34) declaracion -> . skip
    (35) declaracion -> . break
    (36) declaracion -> . begin listadeclaraciones end
    (37) declaracion -> . begin end
    (38) ifthen -> . if relacion then declaracion
    (40) ifthen -> . if relacion declaracion
    (41) ifthen -> . if relacion declaracion else declaracion
    (39) ifthenelse -> . if relacion then declaracion else declaracion
    (45) ubicacion -> . ID
    (46) ubicacion -> . ID CORI expresion CORD

    while           shift and go to state 60
    print           shift and go to state 52
    write           shift and go to state 50
    read            shift and go to state 56
    return          shift and go to state 54
    ID              shift and go to state 59
    skip            shift and go to state 47
    break           shift and go to state 57
    begin           shift and go to state 53
    if              shift and go to state 49

    ifthenelse                     shift and go to state 55
    listadeclaraciones             shift and go to state 51
    ubicacion                      shift and go to state 58
    ifthen                         shift and go to state 48
    declaracion                    shift and go to state 61

state 33

    (16) locales -> locales defvar . PYC

    PYC             shift and go to state 62


state 34

    (17) locales -> locales funcion . PYC

    PYC             shift and go to state 63


state 35

    (15) locales -> funcion PYC .

    ID              reduce using rule 15 (locales -> funcion PYC .)
    fun             reduce using rule 15 (locales -> funcion PYC .)
    begin           reduce using rule 15 (locales -> funcion PYC .)


state 36
